Adding the execute around pointer poset

--- a/tags/templates/index.html
+++ b/tags/templates/index.html
@@ -14,17 +14,17 @@
     
     
 
-<title>Categories • SA</title>
+<title>templates • SA</title>
 
 
 <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Categories"/>
+<meta name="twitter:title" content="templates"/>
 <meta name="twitter:description" content="Development, CS, AI and whatever my little heart desires"/>
 
-<meta property="og:title" content="Categories" />
+<meta property="og:title" content="templates" />
 <meta property="og:description" content="Development, CS, AI and whatever my little heart desires" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://palikar.github.io/categories/" />
+<meta property="og:url" content="https://palikar.github.io/tags/templates/" />
 
 <meta property="og:updated_time" content="2019-12-05T00:12:08+01:00" />
 
@@ -61,7 +61,7 @@
     <!-- Icons -->
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/apple-touch-icon-144-precomposed.png">
     <link rel="shortcut icon" href="/favicon.png">
-    <link rel="alternate" type="application/rss+xml" href="https://palikar.github.io/categories/index.xml" title="SA" />
+    <link rel="alternate" type="application/rss+xml" href="https://palikar.github.io/tags/templates/index.xml" title="SA" />
 
     
 
@@ -188,51 +188,15 @@
 
         <div class="content container">
             
-    <span class="section__title">Categories</span>
+    <span class="section__title">templates</span>
 <ul class="posts">
     
         
 <li>
   <span class="list__title--small">
-    <a href="/categories/c&#43;&#43;/" >c&#43;&#43;</a>
+    <a href="/posts/generic_execution_around_pointer/" >Generic Execution Around Pointer</a>
       
       <time class="pull-right hidden-tablet">Dec 5, 2019</time>
-      
-  </span>
-</li>
-
-<li>
-  <span class="list__title--small">
-    <a href="/categories/machine-learning/" >machine-learning</a>
-      
-      <time class="pull-right hidden-tablet">Oct 20, 2019</time>
-      
-  </span>
-</li>
-
-<li>
-  <span class="list__title--small">
-    <a href="/categories/other/" >other</a>
-      
-      <time class="pull-right hidden-tablet">May 11, 2019</time>
-      
-  </span>
-</li>
-
-<li>
-  <span class="list__title--small">
-    <a href="/categories/emacs/" >emacs</a>
-      
-      <time class="pull-right hidden-tablet">Jun 29, 2018</time>
-      
-  </span>
-</li>
-
-<li>
-  <span class="list__title--small">
-    <a href="/categories/github/" >github</a>
-      
-      <time class="pull-right hidden-tablet">Jun 22, 2018</time>
       
   </span>
 </li>
